# chunking4rag

./: README.md  base_chunking.py  chunking_model.py  chunking_tests.py  overlap_chunking.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
chunkingmethods/: adaptive_chunking.py  base_chunking.py  fixed_length_chunking.py  keywords_chunking.py  paragraph_chunking.py  sentence_chunking.py  sliding_window_chunking.py
chunkingmethods/complexchunking/: excel_chunking.py
chunkingmodel/: __init__.py  chunking_model.py
chunkingparser/: document.py
core/: __init__.py  document.py
data_extraction/: __init__.py  document.py  document_parser.py  excel_parser.py  image_parser.py
tests/: chunking_tests.py  test.csv  test.py  test.xlsx
